--- a/index.ipynb
+++ b/index.ipynb
@@ -288,7 +288,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.plotting.scatter_matrix(data_pred,figsize  = [9, 9]);"
+    "pd.plotting.scatter_matrix(bost,figsize  = [9, 9]);"
    ]
   },
   {
