--- a/index.ipynb
+++ b/index.ipynb
@@ -49,6 +49,7 @@
     "import pandas as pd\n",
     "from sklearn.datasets import load_boston\n",
     "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
     "boston = load_boston()\n",
     "\n",
     "boston_features = pd.DataFrame(boston.data, columns = boston.feature_names)\n",
