--- a/index.ipynb
+++ b/index.ipynb
@@ -272,6 +272,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "boston"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -291,7 +300,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "boston_features_2 = "
+    "boston_features_2 = boston_features"
    ]
   },
   {
