Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -344,7 +344,7 @@
     }
    ],
    "source": [
-    "boston_features_2 = boston_features['CRIM', 'ZN', 'INDUS', 'CHAS', 'NOX', 'RM', 'AGE', 'DIS', 'PTRATIO',\n",
+    "boston_features_2 = boston_features[['CRIM', 'ZN', 'INDUS', 'CHAS', 'NOX', 'RM', 'AGE', 'DIS', 'PTRATIO',\n",
     "       'B', 'LSTAT']"
    ]
   },
