Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -349,13 +349,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -374,7 +367,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "bost"
+   ]
   },
   {
    "cell_type": "markdown",
