Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -609,7 +609,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "abs(data_pred.corr()) > 0.75"
+   ]
   },
   {
    "cell_type": "markdown",
