Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -610,7 +610,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "abs(data_pred.corr()) > 0.75"
+    "abs(boston_features.corr()) > 0.75"
    ]
   },
   {
